Módulo 3 - Kubernetes/Ejercicios/Ejercicio_3_aplicacion_distribuida/deployapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapi
spec:
  selector:
    matchLabels:
      app: todoapi
  template:
    metadata:
      name: todoapi 
      labels:
        app: todoapi
    spec:
      containers:
      - name: main
        image: todo-api
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
