Módulo 3 - Kubernetes/Ejercicios/Ejercicio_3_aplicacion_distribuida/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
spec:
  rules:
    - host: todoapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todofront
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todoapi
                port:
                  number: 3000
